# NeuralFlex-MoE

./: .gitignore  .pre-commit-config.yaml  FREE_TRAINING_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  Key-Notes.txt  MODULES_INTEGRATION.md  NeuralFlex-Prompt.md  PROJECT_STATUS.md  README.md  commands.txt  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt  setup.py  to-do.txt
benchmarks/: benchmark_suite.py
configs/: dataset_config.yaml  free_training_config.yaml  neuraflex_7b.yaml
data/: DATASETS.md  MODEL_WEIGHTS.md  README.md
docker/: Dockerfile  docker-compose.yml
docs/: BUILD_COMPLETE.md  DATASET_GUIDE.md  FREE_TRAINING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  USAGE_GUIDE.md
models/: MODEL_WEIGHTS.md  README.md
notebooks/: 01_model_exploration.ipynb  NeuralFlex.ipynb  colab.ipynb
scripts/: demo.py  evaluate.py  finetune.py  full_pipeline.py  inference.py  prepare_datasets.py  train.py  train_free.py
src/neuraflex_moe/: __init__.py  config.py
src/neuraflex_moe/api/: __init__.py  server.py
src/neuraflex_moe/core/: __init__.py  adaptive_reasoning.py  continuous_learning.py  multi_turn_reasoner.py  self_organizing_pathways.py  temporal_context_compression.py  uncertainty_aware_generation.py
src/neuraflex_moe/data/: __init__.py  data_quality.py
src/neuraflex_moe/evaluation/: __init__.py  evaluator.py
src/neuraflex_moe/inference/: __init__.py  advanced_quantization.py  generator.py  quantization.py  rag_system.py  speculative_decoding.py
src/neuraflex_moe/models/: __init__.py  arc.py  attention.py  audio_encoder.py  cmrb.py  embeddings.py  image_encoder.py  moe_layer.py  neuraflex_moe.py  tcc.py
src/neuraflex_moe/training/: __init__.py  clm.py  data_pipeline.py  trainer.py  weight_transfer.py
src/neuraflex_moe/utils/: __init__.py  advanced_optimization.py  logging_utils.py  memory_utils.py  profiling.py
tests/: test_model.py  test_novel_features.py
